--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,5 +1,4 @@
-/* TODO: Import fonts if needed */
-/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Orelega+One&display=swap'); */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins&display=swap");
 /* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
